# maintainer-compass

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: application-draft.md  sample-report.md
src/maintainer_compass/: __init__.py  cli.py  report.py  scanner.py  templates.py
tests/: test_cli.py  test_report.py  test_scanner.py
