[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "maintainer-compass"
version = "0.1.1"
description = "A dependency-free CLI that audits open-source repositories for maintainer readiness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Maintainer Compass contributors" }]
keywords = ["open-source", "maintenance", "security", "triage", "release", "github"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
maintainer-compass = "maintainer_compass.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
